--- a/myfilehadlig.yml
+++ b/myfilehadlig.yml
@@ -2,8 +2,5 @@
 - hosts: 172.31.26.240
   become: yes
   tasks:
-  - name: create a file
-    file:
-      path: /home/ubuntu
-      state: touch
-      
+  - include_tasks:  myfiles.yml
+
